Se añade nueva funcionalidad para poder ver todos los ingredientes y los pasos para realizar una determinada receta